Bug 1730222 - Support PHC on macOS when running on ARM-based machines r=glandium

This also tightens the check for PHC-type crashes in the exception handler
so that we don't accidentally try to interpret unrelated crash types as
potential PHC ones.

Differential Revision: https://phabricator.services.mozilla.com/D126365